# PEAD

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run_backtest_drift_model.py  run_drift_ml.py  run_pead.py  run_pead_options.py  run_predict_drift.py  run_train_drift_model.py
.github/workflows/: ci.yml
data/reference/: S&P 500 Companies.csv
docs/: architecture.md  data_dictionary.md  drift_ml_modeling.md  drift_model_training_upgrade.md  feature_glossary.md  subsample_drift_ml.md
native/: CMakeLists.txt  README.md
native/bindings/: pybind.cpp
native/include/pead/: arrow_io.hpp  engine.hpp
native/src/: arrow_io.cpp  compute.cpp  compute_cpu.cpp  compute_cuda.cu  main.cpp
pead/: __init__.py  config.py  plots.py  report.py  ticker_groups.py
pead/equities/: __init__.py  analysis.py  data_loader.py  event_study.py  plots.py  report.py  surprise.py
pead/io/: __init__.py  manifest.py  om_schema.py  resolver.py
pead/options/: __init__.py  analysis.py  engine.py  events.py  extract.py  panel.py  report.py
pead/sub_sampling_ml/: __init__.py  attribution.py  config.py  dataset.py  descriptions.py  features.py  labels.py  model.py  pipeline.py  report.py  wrds_extract.py
pead/sub_sampling_ml/serving/: __init__.py  artifact.py  backtest.py  featurize_one.py  predict.py  prediction_report.py  train_final.py  tune.py  wrds_incremental.py
tests/: conftest.py  test_config.py  test_drift_ml_attribution.py  test_drift_ml_backtest.py  test_drift_ml_cli.py  test_drift_ml_dataset.py  test_drift_ml_features.py  test_drift_ml_labels.py  test_drift_ml_model.py  test_drift_ml_report.py  test_drift_ml_scaffold.py  test_drift_ml_serving.py  test_drift_ml_tune.py  test_drift_ml_wrds.py  test_event_study.py  test_integration.py  test_surprise.py
