[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pead"
version = "0.1.0"
description = "Post-Earnings Announcement Drift (PEAD) in the equities and options markets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HrudithL", email = "hrudith.l@gmail.com" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "reportlab>=4.0",
]

[project.optional-dependencies]
# Options-market pipeline: DuckDB reduction + Arrow bridge to the native engine.
options = [
    "duckdb>=1.0",
    "pyarrow>=15.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pead = "run_pead:main"

[tool.setuptools]
packages = ["pead", "pead.equities", "pead.io", "pead.options"]

[tool.pytest.ini_options]
testpaths = ["tests"]
